Fix overflow of diffs in the amendment list (#1220)

--- a/client/src/app/ui/modules/scrolling-table/components/scrolling-table/scrolling-table.component.scss
+++ b/client/src/app/ui/modules/scrolling-table/components/scrolling-table/scrolling-table.component.scss
@@ -57,6 +57,7 @@
     height: 100%;
 
     .scrolling-table-row {
+        overflow: hidden;
         @include scrolling-table-style();
     }
 }
